# app-framework-binder

./: .gitreview  CMakeLists.txt  README.md  afb-daemon.pc.in  libafbwsc.pc.in  mkbuild.sh  stress-clients.sh  stress-server.sh
bindings/: CMakeLists.txt
bindings/intrinsics/: CMakeLists.txt  afb-dbus-binding.c
bindings/samples/: AuthLogin.c  CMakeLists.txt  DemoContext.c  DemoPost.c  README.md  hello2.c  hello3.c  tic-tac-toe.c
bindings/tutorial/: CMakeLists.txt  tuto-3.cpp  tuto-4.c
bindings/tutorials/: CMakeLists.txt  tuto-3.cpp  tuto-5.cpp
conf.d/packaging/deb/: agl-app-framework-binder.dsc  debian.agl-app-framework-binder-bin.install  debian.agl-app-framework-binder-samples.install  debian.control  debian.rules
conf.d/packaging/rpm/: agl-app-framework-binder.spec
coverage/: .gitignore
coverage/scripts/: 00-trace.sh  run-test.sh  zz-exit.sh
docs/: afb-binding-writing.md  afb-daemon-options.md  afb-migration-to-binding-v3.md  api-services-book.yml  migration-to-binding-v3.sed  protocol-x-afb-ws-json1.md
docs/reference-v3/: func-api.md  func-event.md  func-req.md
include/: CMakeLists.txt
include/afb/: afb-api-x3-itf.h  afb-api-x3.h  afb-arg.h  afb-auth.h  afb-binding  afb-binding-postdefs.h  afb-binding-predefs.h  afb-binding-v1.h  afb-binding-v2.h  afb-binding-v3.h  afb-binding.h  afb-binding.hpp  afb-daemon-itf-x1.h  afb-daemon-v1.h  afb-daemon-v2.h  afb-dynapi-legacy.h  afb-event-x1-itf.h  afb-event-x1.h  afb-event-x2-itf.h  afb-event-x2.h  afb-req-v1.h  afb-req-v2.h  afb-req-x1-itf.h  afb-req-x1.h  afb-req-x2-itf.h  afb-req-x2.h  afb-service-itf-x1.h  afb-service-v1.h  afb-service-v2.h  afb-session-x1.h  afb-session-x2.h  afb-verbosity.h
include/afb/c++/: binding  binding-object.hpp  binding-wrap.hpp
src/: CMakeLists.txt  afb-api-dbus.c  afb-api-dbus.h  afb-api-so-v1.c  afb-api-so-v1.h  afb-api-so-v2.c  afb-api-so-v2.h  afb-api-so-v3.c  afb-api-so-v3.h  afb-api-so-vdyn.c  afb-api-so-vdyn.h  afb-api-so.c  afb-api-so.h  afb-api-v3.c  afb-api-v3.h  afb-api-ws.c  afb-api-ws.h  afb-api.c  afb-api.h  afb-apiset.c  afb-apiset.h  afb-args.c  afb-args.h  afb-auth.c  afb-auth.h  afb-autoset.c  afb-autoset.h  afb-calls.c  afb-calls.h  afb-common.c  afb-common.h  afb-config.c  afb-config.h  afb-context.c  afb-context.h  afb-cred.c  afb-cred.h  afb-debug.c  afb-debug.h  afb-error-text.c  (+102 more)
src/devtools/: CMakeLists.txt  exprefs.c  genskel.c  json2c.c
src/tests/: CMakeLists.txt
src/tests/apiset/: CMakeLists.txt  test-apiset.c
src/tests/apiv3/: CMakeLists.txt  test-apiv3.c
src/tests/globset/: CMakeLists.txt  globset.out  test-globset.c
src/tests/session/: CMakeLists.txt  test-session.c
src/tests/u16id/: CMakeLists.txt  test-u16id.c
src/tests/wrap-json/: CMakeLists.txt  test-wrap-json.c
test/: AFB.js
test/monitoring/: AFB.js  monitor-base.css  monitor-demo.css  monitor-pastel.css  monitor.html  monitor.js
